# AnimationPractice

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
src/: main.cpp  testkbinput.cpp
